--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -13,8 +13,10 @@ jobs:
   checkout_source:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Checkout source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           repository: ietf-ribose/ieee-rawbib
           token: ${{ secrets.IETF_BIB_BOT_PAT }}
